--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -5,9 +5,8 @@
 
     <ul>
         <% @recipes.each do |recipe| %>
-            <li>
-                <%= link_to recipe.title, recipe_path(recipe) %> - <%= link_to "Delete", recipe_path(recipe), data: { turbo_method: :delete, turbo_confirm: "Delete recipe?" }, class: "btn btn-danger btn-sm" %>
-            </li>
+            <li><%= link_to recipe.title, recipe_path(recipe) %> - <%= link_to "Delete", recipe_path(recipe), data: { turbo_method: :delete, turbo_confirm: "Delete recipe?" }, class: "btn btn-danger btn-sm" %></li>
         <% end %>
     </ul>
+    <p>Total Recipes: <%= @recipes.count %></p>
 </div>
