--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,11 @@
   </head>
 
   <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    <% if user_signed_in? %>
+      <%= link_to "Salir", destroy_user_session_path, data: { turbo_method: :delete } %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
