--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,9 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <% if user_signed_in? %>
-      <%= link_to "Salir", destroy_user_session_path, data: { turbo_method: :delete } %>
+      <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "btn btn-danger mt-3" %>
+    <% else %>
+    <%= link_to "Log in", new_user_session_path, class: "btn btn-primary mt-3" %>
     <% end %>
     <%= yield %>
   </body>
