--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -20,6 +20,7 @@
 
 
     <%= f.submit "Save", class: "btn btn-primary mt-3" %>
+    <%= link_to "Cancel", @recipe.persisted? ? recipe_path(@recipe) : recipes_path, class: "btn btn-danger mt-3 ms-2" %>
     
 <% end %>
     
