--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -10,5 +10,5 @@
 
 
 
-    <%= link_to 'Edit', edit_recipe_path(@recipe), class: "btn btn-secondary" %>
-    <%= link_to 'Back', recipes_path, class: "btn btn-primary" %>
+    <%= link_to 'Edit', edit_recipe_path(@recipe), class: "btn btn-primary" %>
+    <%= link_to 'Back', recipes_path, class: "btn btn-secondary" %>
