--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,26 +1,26 @@
 <%= form_with model: @recipe do |f| %>
-    <div class="mb-3">
-        <%= f.label :title %>
-        <%= f.text_field :title, placeholder: "Recipes title", class: "form-control" %>
-    </div>
+  <div class="mb-3">
+    <%= f.label :title, "Title" %>
+    <%= f.text_field :title, placeholder: "Ex: Choclo Pie", class: "form-control" %>
+  </div>
 
-    <div class="mb-3">
-        <%= f.label :cook_time %>
-        <%= f.number_field :cook_time, placeholder: "Cook time in minutes", class: "form-control" %>
-    </div>
+  <div class="mb-3">
+    <%= f.label :cook_time, "Cook Time (minutes)" %>
+    <%= f.number_field :cook_time, class: "form-control" %>
+  </div>
 
-    <div class="mb-3">
-        <%= f.label :difficulty %>
-        <%= f.text_field :difficulty, placeholder: "Difficulty level (hard, medium, easy)", class: "form-control" %>
-    </div>
+  <div class="mb-3">
+    <%= f.label :difficulty, "Difficulty" %>
+    <%= f.select :difficulty, ["easy", "medium", "hard"], {}, class: "form-select" %>
+  </div>
 
-    <div class = "mb-3">
-        <%= f.label :instructions %>
-        <%= f.rich_text_area :instructions, placeholder: "Write the instructions", class: "form-control" %>
+  <div class="mb-3">
+    <%= f.label :instructions, "Instructions" %>
+    <%= f.rich_text_area :instructions, class: "form-control" %>
+  </div>
 
-
-    <%= f.submit "Save", class: "btn btn-primary mt-3" %>
-    <%= link_to "Cancel", @recipe.persisted? ? recipe_path(@recipe) : recipes_path, class: "btn btn-danger mt-3 ms-2" %>
-    
+  <div class="mt-3">
+    <%= f.submit "Save", class: "btn btn-primary" %>
+    <%= link_to "Cancel", @recipe.persisted? ? recipe_path(@recipe) : recipes_path, class: "btn btn-secondary ms-2" %>
+  </div>
 <% end %>
-    
