--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,12 +1,24 @@
-<div class= "container">
-    <h1>Recipes</h1>
+<h1 class="mb-4 text-center">🍳 Recipe Book</h1>
 
-    <%= link_to 'New Recipe', new_recipe_path, class: "btn btn-primary" %>
+<% if can?(:create, Recipe) %>
+  <div class="text-end mb-3">
+    <%= link_to "➕ New Recipe", new_recipe_path, class: "btn btn-success" %>
+  </div>
+<% end %>
 
-    <ul>
-        <% @recipes.each do |recipe| %>
-            <li><%= link_to recipe.title, recipe_path(recipe) %> - <%= link_to "Delete", recipe_path(recipe), data: { turbo_method: :delete, turbo_confirm: "Delete recipe?" }, class: "btn btn-danger btn-sm" %></li>
-        <% end %>
-    </ul>
-    <p>Total Recipes: <%= @recipes.count %></p>
+<div class="row row-cols-1 row-cols-md-2 g-4">
+  <% @recipes.each do |recipe| %>
+    <div class="col">
+      <div class="card shadow-sm h-100">
+        <div class="card-body">
+          <h5 class="card-title"><%= link_to recipe.title, recipe_path(recipe), class: "text-decoration-none" %></h5>
+          <p class="card-text text-muted">
+            ⏱️ <%= recipe.cook_time %> min |
+            💪 <%= recipe.difficulty.capitalize %> |
+            👤 <%= recipe.user.email %>
+          </p>
+        </div>
+      </div>
+    </div>
+  <% end %>
 </div>
